# esp32-dataformat

./: CBufferSystem.cpp  CCRC16.cpp  CCRC8.cpp  CDateTimeSystem.cpp  CFileSignature.cpp  CJsonConvertor.cpp  CJsonParser.cpp  CJsonReadStream.cpp  CLittlefsSystem.cpp  CMakeLists.txt  CNvsSystem.cpp  COTASystem.cpp  CSpiffsSystem.cpp  Kconfig.projbuild  README.md  buf.md  idf_component.yml  nvs.md  ota.md  spiffs.md  sync.md  test.json
include/: CBufferSystem.h  CCRC16.h  CCRC8.h  CDateTimeSystem.h  CFileSignature.h  CJsonConvertor.h  CJsonParser.h  CJsonReadStream.h  CJsonType.h  CLittlefsSystem.h  CNvsSystem.h  COTASystem.h  CSpiffsSystem.h  CWriteEvent.h
